# Embedded-Exploration

./: .gitignore  README.md
BeepingBuzzer/: CMakeLists.txt  README.md  main.c
BeepingJoystick/: CMakeLists.txt  README.md  main.c
HelloLED/: CMakeLists.txt  README.md  main.c
HelloPico/: CMakeLists.txt  README.md  main.c
JoystickOutput/: CMakeLists.txt  README.md  main.c
Music/HandcraftedTunes/: CMakeLists.txt  README.md  main.c  tones.h
Music/Song2Beeps/: CMakeLists.txt  README.md  main.c  notes.h  tones.h
Music/Song2Beeps/converter/: .gitignore  Cargo.toml
Music/Song2Beeps/converter/src/: constants.rs  get_audio.rs  main.rs  use_fft.rs
Pong/: CMakeLists.txt  README.md  display.c  display.h  game.c  game.h  joystick.c  joystick.h  main.c
SimpleAnimations/: CMakeLists.txt  README.md  animations.h  led_matrix.h  main.c  rainbow_ripple.c  raindrops.c  random_fill.c  ripple.c  snake.c  spiral.c
_template/: CMakeLists.txt
